# conversion-svg

./: Cargo.toml  README.md
src/: inkscape.rs  main.rs
ui/: app.slint  appwindow.slint  treeview.slint
