[package]
name = "conversion-svg"
version = "0.1.0"
authors = ["Erich Schroeter <erich.schroeter@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
regex = "1.10.4"
rfd = "0.14.1"
slint = "1.5"
tokio = { version = "1.37.0", features = ["sync", "rt", "rt-multi-thread"] }

[build-dependencies]
slint-build = "1.5"
